[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
dotenvy = "0.15.7"
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
tracing = "0.1.37"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4.31", features = ["serde"] }
axum-macros = "0.3.8"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
askama = { version = "0.12.1", features = ["with-axum"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["fs"] }
askama_axum = "0.3.0"
hyperlocal = "0.8.0"
futures = "0.3.29"
regex = "1.10.2"
sanitize_html = "0.8.0"
axum-test = "13.4.1"
rand = "0.8.5"
